# src/main/java/space/dezentrale/members/model/Member.java
@@ -2,7 +2,7 @@
  * Dezentrale Members Administration
  * An API and application to administer the members of the hackspace dezentrale in Leipzig.
  *
- * The version of the OpenAPI document: @project.version@
+ * The version of the OpenAPI document: 0.1.0-SNAPSHOT
  * Contact: p1ng0ut@mailbox.org
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -12,35 +12,38 @@
 
 package space.dezentrale.members.model;
 
-import java.util.Objects;
-import java.util.Arrays;
-import java.time.LocalDate;
-import space.dezentrale.members.model.MemberRole;
-import space.dezentrale.members.model.MemberStatus;
-import space.dezentrale.members.model.MemberType;
-import com.fasterxml.jackson.annotation.*;
-
-import javax.validation.constraints.*;
-import javax.validation.Valid;
-import io.micronaut.core.annotation.*;
-import javax.annotation.Generated;
+import com.fasterxml.jackson.annotation.JsonFormat;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+import com.fasterxml.jackson.annotation.JsonTypeName;
+import io.micronaut.core.annotation.Introspected;
+import io.micronaut.core.annotation.Nullable;
 import io.swagger.v3.oas.annotations.media.Schema;
+
+import javax.annotation.Generated;
+import javax.validation.constraints.Min;
+import javax.validation.constraints.NotNull;
+import javax.validation.constraints.Pattern;
+import java.time.LocalDate;
+import java.util.Objects;
 
 /**
  * Member
  */
 @JsonPropertyOrder({
-  Member.JSON_PROPERTY_NUMBER,
-  Member.JSON_PROPERTY_ID,
-  Member.JSON_PROPERTY_NICKNAME,
-  Member.JSON_PROPERTY_EMAIL,
-  Member.JSON_PROPERTY_DATE_OF_BIRTH,
-  Member.JSON_PROPERTY_TYPE,
-  Member.JSON_PROPERTY_ROLE,
-  Member.JSON_PROPERTY_STATUS
+    Member.JSON_PROPERTY_NUMBER,
+    Member.JSON_PROPERTY_ID,
+    Member.JSON_PROPERTY_NICKNAME,
+    Member.JSON_PROPERTY_EMAIL,
+    Member.JSON_PROPERTY_DATE_OF_BIRTH,
+    Member.JSON_PROPERTY_PGP_KEY,
+    Member.JSON_PROPERTY_TYPE,
+    Member.JSON_PROPERTY_ROLE,
+    Member.JSON_PROPERTY_STATUS
 })
 @JsonTypeName("Member")
-@Generated(value="org.openapitools.codegen.languages.JavaMicronautServerCodegen", date="2022-11-11T22:51:49.455628984+01:00[Europe/Berlin]")
+@Generated(value = "org.openapitools.codegen.languages.JavaMicronautServerCodegen", date = "2022-11-16T15:52:35.373+01:00[Europe/Berlin]")
 @Introspected
 public class Member {
     public static final String JSON_PROPERTY_NUMBER = "number";
@@ -57,6 +60,9 @@ public class Member {
 
     public static final String JSON_PROPERTY_DATE_OF_BIRTH = "dateOfBirth";
     private LocalDate dateOfBirth;
+
+    public static final String JSON_PROPERTY_PGP_KEY = "pgpKey";
+    private String pgpKey;
 
     public static final String JSON_PROPERTY_TYPE = "type";
     private MemberType type;
@@ -193,6 +199,30 @@ public class Member {
         this.dateOfBirth = dateOfBirth;
     }
 
+    public Member pgpKey(String pgpKey) {
+        this.pgpKey = pgpKey;
+        return this;
+    }
+
+    /**
+     * Get pgpKey
+     *
+     * @return pgpKey
+     **/
+    @Nullable
+    @Schema(name = "pgpKey", example = "-----BEGIN PGP SIGNATURE----- iQIzBAABCAAdFiEEqcXfTSLpmZjZh1pREMAcWi9gWecFAmLP1OIACgkQEMAcWi9g WefaaRAA8OO6+VR30iCtEygf3HoIn85CBBYDjskWr+XNQ81dGVJjyTTl+MsRS+AY KV2aNn3ID9uufQGj6Jzf82EYHb401EZU0CH1gkQzAp5PN5bzwpbFwJhbuluJToaB Q7Kg94SQEsjwNkEEw6INZr/OQT+HW1YiuNKIhLncf/ErHMq8EqT3lkHxjQYRb6mt hpyP4/4esXNXOKVDxfThGXZFXZ8m9JQff5hglEYzz8+tnkc/XyxwNd7tqc1/FbKE U+84kVyPEHcUG5OMqN000CNpQmjfOTcUbdN44lYAL5WGe1Z7qTg4jf66LqmOoP9R ePzP3DsV5rBnKkSdoxryfBjvUW/4E5KlBMfgtHlGgVGQv/H0qbgBpHJEB08M4xGh GnSovlh8KFMSBaQHEaqux9Bv5yAQjmd5X5u+sES9uDETRuQ0wmcdXhOoFZW4NtiM jiq6wH+nhXa9oLV4G7simuCNpEtT038CCzUpla1tlnnxthimBE73uxy40z3cjtPw uoKropdjqgiKy4YCckKpA+hAY+/4pMRQ+V+ZgMqZmnU6Exkf1lJNwsJd2FK0u+Hu ZULkFS2Y2QFvATd+0dNNLvK+itYUaYdemOuYmjV0gbIvFzR9cqRNN6W0Dc0bpE+U kK+tiYuLhmpiRxwVkTgOZiaIjmWFLx1YrOSN7O2P3BFymq5QVNA= =tjq+ -----END PGP SIGNATURE-----", required = false)
+    @JsonProperty(JSON_PROPERTY_PGP_KEY)
+    @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+    public String getPgpKey() {
+        return pgpKey;
+    }
+
+    @JsonProperty(JSON_PROPERTY_PGP_KEY)
+    @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
+    public void setPgpKey(String pgpKey) {
+        this.pgpKey = pgpKey;
+    }
+
     public Member type(MemberType type) {
         this.type = type;
         return this;
@@ -200,6 +230,7 @@ public class Member {
 
     /**
      * Get type
+     *
      * @return type
      **/
     @Nullable
@@ -276,6 +307,7 @@ public class Member {
             Objects.equals(this.nickname, member.nickname) &&
             Objects.equals(this.email, member.email) &&
             Objects.equals(this.dateOfBirth, member.dateOfBirth) &&
+            Objects.equals(this.pgpKey, member.pgpKey) &&
             Objects.equals(this.type, member.type) &&
             Objects.equals(this.role, member.role) &&
             Objects.equals(this.status, member.status);
@@ -283,7 +315,7 @@ public class Member {
 
     @Override
     public int hashCode() {
-        return Objects.hash(number, id, nickname, email, dateOfBirth, type, role, status);
+        return Objects.hash(number, id, nickname, email, dateOfBirth, pgpKey, type, role, status);
     }
 
     @Override
@@ -295,6 +327,7 @@ public class Member {
         sb.append("    nickname: ").append(toIndentedString(nickname)).append("\n");
         sb.append("    email: ").append(toIndentedString(email)).append("\n");
         sb.append("    dateOfBirth: ").append(toIndentedString(dateOfBirth)).append("\n");
+        sb.append("    pgpKey: ").append(toIndentedString(pgpKey)).append("\n");
         sb.append("    type: ").append(toIndentedString(type)).append("\n");
         sb.append("    role: ").append(toIndentedString(role)).append("\n");
         sb.append("    status: ").append(toIndentedString(status)).append("\n");
